--- a/app/features/itemList/ItemList.scss
+++ b/app/features/itemList/ItemList.scss
@@ -8,4 +8,18 @@
   .lighter {
     opacity: 0.5;
   }
+
+  .input-group-addon {
+    background-color: transparent;
+    border: 0px;
+  }
+
+  input[type="checkbox"] {
+    font-size: 100px;
+  }
+
+  div.completed .line-throughable {
+    color: #d9d9d9;
+    text-decoration: line-through;
+  }
 }
