--- a/app/features/itemList/ItemList.scss
+++ b/app/features/itemList/ItemList.scss
@@ -5,21 +5,59 @@
     padding-left: $padding-base-vertical;
   }
 
+  .margin-left {
+    margin-left: $padding-base-vertical;
+  }
+
+  .align-center {
+    text-align: center;
+  }
+
+  .align-left {
+    text-align: left;
+    margin: 5%;
+  }
+
+  .margin-auto {
+    margin: auto;
+  }
+
   .lighter {
     opacity: 0.5;
   }
 
-  .input-group-addon {
-    background-color: transparent;
-    border: 0px;
+  .item-line {
+    .input-group-addon {
+      background-color: transparent;
+      border: 0px;
+    }
+
+    input[type="checkbox"] {
+      font-size: 100px;
+    }
+
+    div.completed .line-throughable {
+      color: #d9d9d9;
+      text-decoration: line-through;
+    }
+
+    .width-10 {
+      width: 10%;
+    }
+
+    .width-20 {
+      width: 20%;
+    }
+    .width-40 {
+      width: 40%;
+      display: inline-block;
+    }
+
+    .width-60 {
+      width: 60%;
+    }
+
   }
 
-  input[type="checkbox"] {
-    font-size: 100px;
-  }
-
-  div.completed .line-throughable {
-    color: #d9d9d9;
-    text-decoration: line-through;
-  }
 }
+
