--- a/app/features/itemList/ItemList.scss
+++ b/app/features/itemList/ItemList.scss
@@ -1,12 +1,16 @@
 .item-list {
   @import "../../global_partial";
 
-  .padding-left {
-    padding-left: $padding-base-vertical;
+  .margin-right {
+    margin-right: $padding-base-vertical;
   }
 
   .margin-left {
     margin-left: $padding-base-vertical;
+  }
+
+  .margin-auto {
+    margin: auto;
   }
 
   .align-center {
@@ -16,10 +20,6 @@
   .align-left {
     text-align: left;
     margin: 5%;
-  }
-
-  .margin-auto {
-    margin: auto;
   }
 
   .lighter {
